# hilbert_sqrt5

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
data/: str10br4_11.sobj  str10br4_7.sobj  str10br7_11.sobj  str10gens_norm_18.sobj  str10gens_norm_21.sobj  str10gens_norm_21_1.sobj  str10gens_norm_22.sobj  str5_brs.sobj  str5br5_10.sobj  str5br5_6.sobj  str5br5_7.sobj  str5br6_10.sobj  str5br6_7.sobj  str5br7_10.sobj  str5gens.sobj  str5gens1.sobj  str5gens2.sobj  str5rel12.sobj  str6_brs.sobj  str6gens.sobj  str6gens1.sobj  str6gens2.sobj  str7br5_6.sobj  str7br5_7.sobj  str7gens1.sobj  str7gens2.sobj  str7gens3.sobj  str7rel10.sobj  str7rel13.sobj  str8gens1.sobj  str8gens_norm_17.sobj  str8gens_norm_18.sobj  str9br7_11.sobj  str9br7_8.sobj  str9br8_11.sobj  str9gens_norm_21.sobj  str9gens_norm_22.sobj  str9gens_norm_23.sobj  str9gens_norm_24.sobj  str9gens_norm_26.sobj
data/brackets/: str10_brs.sobj  str10_cand.sobj  str10_star_norms.sobj  str10_weights.sobj  str11_brs.sobj  str11_cand.sobj  str12_brs.sobj  (+158 more)
org/: str.org
relations/: a10_rel  a11_rel  a12_rel  a13_rel  a14_rel  a15_rel  a16_rel  a17_rel  a18_rel  a19_rel  a1_rel  a20_rel  a21_rel  a22_rel  a23_rel  a24_rel  a25_rel  a26_rel  a27_rel  a28_rel  a29_rel  a30_rel  a31_rel  a32_rel  a33_rel  a34_rel  a35_rel  a36_rel  a37_rel  a38_rel  a39_rel  a40_rel  a41_rel  a42_rel  a43_rel  a44_rel  a45_rel  a46_rel  a47_rel  a48_rel  (+18 more)
src/: bignum.rs  diff_op.rs  eisenstein.rs  elements.rs  fcvec.rs  lib.rs  misc.rs  modstr.py  relation.sage  structure.rs  test.rs  theta_chars.rs
tests/: test.rs
(+688 files in other folders)
