[package]
name = "hilbert_sqrt5"
version = "0.1.0"
authors = ["Sho Takemori <stakemorii@gmail.com>"]

[dependencies]
flint = { git = "https://github.com/stakemori/flint-rust.git"}
rust-gmp = { git = "https://github.com/stakemori/rust-gmp.git", branch = "develop"}
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde-pickle = "*"
rand = "0.3"

[dev-dependencies]
bincode = "0.8.0"
csv = "1.0.0-beta.5"
